# gitevo

./: CHANGES.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: install.yml  publish.yml
examples/: doc_custom_2.py  ex_basic.py  ex_custom_1.py  fastapi.py  gitevo_fastapi.py  gitevo_java.py  gitevo_javascript.py  gitevo_javascript3.py  gitevo_python.py  gitevo_python3.py  gitevo_python_ok.py  gitevo_typescript.py  gitevo_typescript3.py  java.py  javascript.py  javascript2.py  python.py  python2.py  python3.py  python_functional.py  typescript.py  typescript2.py
gitevo/: application.py  cli.py  cli_reports.py  gitevo.py  metrics.py  model.py  report_csv.py  report_html.py  utils.py
gitevo/reports/: fastapi.py  fastapi_model.py  java.py  javascript.py
tests/: conftest.py  test_api.py  test_cli.py  test_gitevo.py  test_local_repo.py  test_repos.py  test_utils.py
